--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <noscript>Enabling JavaScript is required to run this app.</noscript>
-  <div id="dc-root"></div>
+  <div id="sample-root"></div>
 </body>
 
 </html>
